# LearnFIL

./: .gitignore  FUNDING.json  README.md  index.html
docs/: architecture.md  contributing.md  curriculum.md  development.md  whitepaper.md
experiments/: README.md
experiments/learnfil-p2p/: README.md  pyproject.toml
experiments/learnfil-p2p/learnfil_p2p/: __init__.py  cli.py  node.py  protocol.py
experiments/learnfil-p2p/learnfil_p2p.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/: App.tsx
src/components/: BookmarkButton.tsx  CertificateButton.tsx  LandingPage.tsx  LessonContent.tsx
src/lib/: bookmarks.ts
