[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "learnfil-p2p"
version = "0.1.0"
description = "LearnFIL peer to peer progress experiment using py-libp2p"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "libp2p",
  "trio",
  "multiaddr",
]

[project.scripts]
learnfil-p2p = "learnfil_p2p.cli:main"

[tool.setuptools]
packages = ["learnfil_p2p"]